conditions.Conditions.scala.code
if (estFaceMur()) {
  	recule()
}	esle	{
  	avance()
}